tests/inc_dec/valid/increment_pre_return.su
s32 main(){
  s32 a = 5;
  return ++a;
}