tests/inc_dec/invalid/literal_dec_post.su
s32 main(){
  2--;
  return 0;
}